# android_vuln_poc-exp

./: README.md
CVE-2016-0805/: poc.c
CVE-2016-0844/: Application.mk  poc.c  readme.md
CVE-2016-10285/: poc.c
CVE-2016-10288/: readme.md
CVE-2016-10290/: poc.c  readme.md
CVE-2016-10294/: poc.c  readme.md
CVE-2016-10295/: poc.c
CVE-2016-10296/: readme.md
CVE-2016-3865/: readme.md
CVE-2016-3867/: Android.mk  Application.mk  poc.c
CVE-2016-3869/: readme.md
CVE-2016-6738/: poc.c  readme.md
CVE-2016-6740/: readme.md
CVE-2016-6742/: readme.md
CVE-2016-6744/: poc.c
CVE-2016-6745/: poc.c
CVE-2016-8464/: Application.mk  poc.c
CVE-2017-0329/: poc.c
CVE-2017-0332/: readme.md
CVE-2017-0432/: Application.mk  poc.c  readme.md
CVE-2017-0446/: readme.md
CVE-2017-0524/: poc.c
CVE-2017-0536/: makefile
CVE-2017-0744/: readme.md
CVE-2017-10997/: poc.c
CVE-2017-6426/: Android.mk  poc.c
CVE-2017-8243/: readme
CVE-2017-8244/: poc.c  readme.md
CVE-2017-8266/: readme.md
CVE-2017-9691/: readme.md
CVE-2018-18281/: readme.md
CVE-2018-18281-Android/: Android.mk  poc.c  poc.old.c  readme.md  runpoc.c
EXP-2015-5165/: create-image.sh  exp-2015-5165.c  poc-2015-5165.c  readme.md
EXP-2015-7504/: build-exploit.sh  exp-2015-5165-7504.c
EXP-CVE-2016-2411/: readme.md
linux/CVE-2019-1010298/: Android.mk  CMakeLists.txt  Makefile  README.md
linux/CVE-2019-1010298/host/: Makefile  exploit.c
linux/CVE-2019-1010298/ta/: Android.mk  Makefile  sub.mk  user_ta_header_defines.h  verify.c
linux/CVE-2019-1010298/ta/include/: verify.h
(+854 files in other folders)
